# mktestdocs

./: Makefile  README.md  dinosaur.py  pyproject.toml  setup.py
.github/workflows/: pytest.yml  tests.yml
mktestdocs/: __init__.py  __main__.py
src/mktestdocs/: __init__.py
tests/: conftest.py  test_actual_docstrings.py  test_bad_class.py  test_class.py  test_codeblock.py  test_format_docstring.py  test_markdown.py  test_mktestdocs.py
tests/data/: big-bad.md  big-good.md
tests/data/bad/: a.md  b.md  big-bad.md
tests/data/good/: a.md  b.md  big-good.md  c.md  d.md
tests/docs/: additional-language-support.md  bash-support.md  multiple-code-blocks.md
