[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mktestdocs"
version = "0.2.5"
description = "A tool for testing markdown documentation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
test = ["pytest==8.4.1"]

[tool.setuptools.packages.find]
where = ["src"]